--- a/0-100-course/week-11/worker-app-1/package.json
+++ b/0-100-course/week-11/worker-app-1/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "cors": "^2.8.5",
     "hono": "^4.6.12",
-    "prisma": "^6.0.1"
+    "prisma": "^6.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241127.0",
