--- a/0-100-cohort-2-live/my-turborepo/packages/ui/package.json
+++ b/0-100-cohort-2-live/my-turborepo/packages/ui/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
-  "type": "module",
   "private": true,
   "exports": {
+    "./input-box": "./src/input-box.tsx",
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./code": "./src/code.tsx",
+    "./admin": "./src/admin.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
